# jm-dash-noc

./: .gitignore  README.md  pyproject.toml
.ai/: HANDOFF.md  README.md  dash-noc.md  thermals-front.md
.ai/history/: 260528-1421-contexto-thermals-front.md  260528-1856-dash-noc-bootstrap.md  260528-1858-renombrado-directorio-dash-noc.md  260528-1901-conservar-proxmox-thermals-historico.md  260528-1912-handoff-sesion-nueva.md
docs/: api-contracts.md  overview.md  planning.md  tasks.md
docs/adr/: 0001-project-scope.md  0002-proxmox-serves-dashboard.md  0003-agent-services-for-remote-data.md  0004-tablet-first-layout.md  0005-central-api-stack.md  0006-proxmox-thermals-integration.md
docs/design/previews/: 01-dual-host.html  02-side-by-side.html  03-noc.html  04-mail.html  tablet-noc.html
scripts/: run_api.py
src/dash_noc/: api.py
